# Zhyx

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  resolve_deps.sh  start.sh
.github/workflows/: ci.yml
assets/avatar/: README.md  app.html  debug_arcs.html
assets/avatar/models/: registry.json
config/: zhyx.yaml  zhyx.yaml.example
docs/: Office_MCP.md  macOS_打包.md
prompts/: system.txt
scripts/: build_macos_app.py  check_env.py  download_anthropic_skills.py  download_models.py  start_api.sh  test_avatar_frontend.py  test_mcp.py  test_mic_speak.py  test_speak.py
skills/: README.md
src/: main.py
src/agent_skills/: __init__.py  loader.py
src/api/: __init__.py  app.py
src/avatar/: __init__.py  window.py
src/core/: __init__.py  chat.py  routing.py
src/mcp_client/: __init__.py  client.py
src/skills/: __init__.py  base.py  chat.py  file_reader.py  file_writer.py  registry.py  task_planner.py
src/voice/: __init__.py  stt.py  tts.py
test/: test_skills.py
