[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhyx"
version = "0.1.0"
description = "知式 - 本地优先数字人智能中枢"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
mvp = ["httpx>=0.27", "fastapi>=0.109", "uvicorn>=0.27", "pyyaml>=6"]
dev = ["pytest", "ruff", "mypy"]


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
